bin_PROGRAMS = bkjg margalit sshmidt

# If you need special libraries, e.g. libm (math lib), declare them like so:
bkjg_LDFLAGS = -lm

margalit_LDFLAGS = -lm

sshmidt_LDFLAGS = -lm

bkjg_SOURCES = main.c distribution.h bkjg.c

margalit_SOURCES = main.c distribution.h margalit.c

sshmidt_SOURCES = main.c distribution.h sshmidt.c
